src/test/ui/dropck/dropck_no_diverge_on_nonregular_3.stderr
error[E0320]: overflow while adding drop-check rules for `std::option::Option<Wrapper<u32>>`
  --> $DIR/dropck_no_diverge_on_nonregular_3.rs:34:9
   |
LL |     let w = Some(Wrapper::Simple::<u32>);
   |         ^
   |
   = note: overflowed on FingerTree<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<u32>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>

error[E0320]: overflow while adding drop-check rules for `std::option::Option<Wrapper<u32>>`
  --> $DIR/dropck_no_diverge_on_nonregular_3.rs:34:13
   |
LL |     let w = Some(Wrapper::Simple::<u32>);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: overflowed on FingerTree<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<u32>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>

error[E0320]: overflow while adding drop-check rules for `Wrapper<u32>`
  --> $DIR/dropck_no_diverge_on_nonregular_3.rs:34:18
   |
LL |     let w = Some(Wrapper::Simple::<u32>);
   |                  ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: overflowed on FingerTree<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<Node<u32>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0320`.
